feat(mcpserver):获取公共和自己的mcpserver统一为一个接口
